Refine layout and add contact and company details

--- a/index.html
+++ b/index.html
@@ -16,36 +16,33 @@
     <div class="wrapper">
       <header>
         <h1>StayUp</h1>
-        <p>Tools and Support to help you operate Cloud Foundry clusters and keep CF apps running smoothly</p>
+        <p>Tools and support to operate Cloud Foundry clusters and keep CF apps running smoothly</p>
 
-        <p class="view"><a href="https://github.com/stayup-io/website">View the Project on GitHub <small>stayup-io/website</small></a></p>
+        <p class="view"><a href="https://logsearch.io">Logsearch<small>ELK + BOSH</small></a></p>
+        <p class="view"><a href="https://github.com/logsearch/logsearch-for-cloudfoundry">Logsearch for Cloud Foundry<small>Log analysis for Cloud Foundry</small></a></p>
 
-
-        <ul>
-          <li><a href="https://github.com/stayup-io/website/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/stayup-io/website/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/stayup-io/website">View On <strong>GitHub</strong></a></li>
-        </ul>
       </header>
       <section>
         <h3>
 <a id="what-we-do" class="anchor" href="#what-we-do" aria-hidden="true"><span class="octicon octicon-link"></span></a>What we do</h3>
 
-<p>We build tools and provide support to help your operations team keep your Cloud Foundry platform and the apps on it running smoothly.</p>
+<p>We build tools and provide support to help operations teams keep their Cloud&nbsp;Foundry platform and the apps on it running smoothly.</p>
 
 <p><img src="https://cloud.githubusercontent.com/assets/227505/7658399/c7763396-faee-11e4-8676-05c3f4d0e894.png" alt="Dashboard of cf-app logs"></p>
 
 <h3>
 <a id="who-we-are" class="anchor" href="#who-we-are" aria-hidden="true"><span class="octicon octicon-link"></span></a>Who we are</h3>
 
-<p><img src="https://cloud.githubusercontent.com/assets/227505/7658732/74075f3e-faf1-11e4-9549-afb2b36f71f4.png" alt="David Laing">
-David Laing, CEO; StayUp - After 2 years as lead of the Logsearch.io project (ELK + BOSH); he built the logsearch-for-cloudfoundry addon to bring log analysis to CF operators and CF users. </p>
-
-<p><img src="https://cloud.githubusercontent.com/assets/227505/7658609/7938eb54-faf0-11e4-8cce-f9d61cf88de2.png" alt="Colin Humphreys">
-Colin Humphreys, Investor; CloudCredo - Colin has more than fifteen years’ experience delivering working solutions and saving failing projects. He is passionate about Cloud Computing, DevOps, Continuous Delivery and PaaS. Colin delivers tooling to the Cloud Foundry community, is a regular speaker on PaaS-related topics, and is a member of Cloud Foundry's Community Advisory Board.</p>
+<p><img class="profile-avatar" src="https://cloud.githubusercontent.com/assets/227505/7658732/74075f3e-faf1-11e4-9549-afb2b36f71f4.png" alt="David Laing">
+<div class="profile-title">David Laing, CEO <a href="mailto:david@stayup.io"><img class="profile-icon" src="https://cloud.githubusercontent.com/assets/227505/7659289/c85b6cfc-faf5-11e4-9b9a-ebf29ec4e6a8.png"></a></div>
+After 2 years as lead of the Logsearch.io project (ELK + BOSH); he built the logsearch-for-cloudfoundry addon to bring log analysis to CF operators and CF users. </p>
+<br clear="all">
+<p><img class="profile-avatar" src="https://cloud.githubusercontent.com/assets/227505/7658987/9515cc36-faf3-11e4-906e-a67f867c5d24.jpg" alt="Colin Humphreys">
+<div class="profile-title">Colin Humphreys, CloudCredo <a href="mailto:david@stayup.io"><img class="profile-icon" src="https://cloud.githubusercontent.com/assets/227505/7659289/c85b6cfc-faf5-11e4-9b9a-ebf29ec4e6a8.png"></a></div>
+Colin runs CloudCredo; the premier Cloud Foundry consulting company.  He is a regular speaker on PaaS-related topics, and a member of Cloud Foundry's Community Advisory Board.</p>
       </section>
       <footer>
-        <p>This project is maintained by <a href="https://github.com/stayup-io">stayup-io</a></p>
+        <p>&copy; 2014-2015 STAYUP.IO LIMITED <br>UK Company No. 09563477</p>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
