Fix http://www.logsearch.io link

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h1>StayUp</h1>
         <p>Tools and support to operate Cloud Foundry clusters and keep CF apps running smoothly</p>
 
-        <p class="view"><a href="https://logsearch.io">Logsearch<small>ELK + BOSH</small></a></p>
+        <p class="view"><a href="http://www.logsearch.io">Logsearch<small>ELK + BOSH</small></a></p>
         <p class="view"><a href="https://github.com/logsearch/logsearch-for-cloudfoundry">Logsearch for Cloud Foundry<small>Log analysis for Cloud Foundry</small></a></p>
 
       </header>
