Fix Colin's email address

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 After 2 years as lead of the Logsearch.io project (ELK + BOSH); he built the logsearch-for-cloudfoundry addon to bring log analysis to CF operators and CF users. </p>
 <br clear="all">
 <p><img class="profile-avatar" src="https://cloud.githubusercontent.com/assets/227505/7658987/9515cc36-faf3-11e4-906e-a67f867c5d24.jpg" alt="Colin Humphreys">
-<div class="profile-title">Colin Humphreys, CloudCredo <a href="mailto:david@stayup.io"><img class="profile-icon" src="https://cloud.githubusercontent.com/assets/227505/7659289/c85b6cfc-faf5-11e4-9b9a-ebf29ec4e6a8.png"></a></div>
+<div class="profile-title">Colin Humphreys, CloudCredo <a href="mailto:colin@cloudcredo.com"><img class="profile-icon" src="https://cloud.githubusercontent.com/assets/227505/7659289/c85b6cfc-faf5-11e4-9b9a-ebf29ec4e6a8.png"></a></div>
 Colin runs CloudCredo; the premier Cloud Foundry consulting company.  He is a regular speaker on PaaS-related topics, and a member of Cloud Foundry's Community Advisory Board.</p>
       </section>
       <footer>
