Update stayUp.io "logo" style

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>StayUp by stayup-io</title>
+    <title>stayUp.io</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -11,11 +11,12 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+    <link href="http://fonts.googleapis.com/css?family=Ubuntu:300,300italic,400,400italic,500,500italic,700,700italic&amp;subset=latin,greek,cyrillic" rel="stylesheet" type="text/css">
   </head>
   <body>
     <div class="wrapper">
       <header>
-        <h1>StayUp</h1>
+        <span style="background-color: lightblue; font-family: Ubuntu, san-serif; font-weight: 500; font-style: normal; color: black;">stayUp.io</span>
         <p>Tools and support to operate Cloud Foundry clusters and keep CF apps running smoothly</p>
 
         <p class="view"><a href="http://www.logsearch.io">Logsearch<small>ELK + BOSH</small></a></p>
