Put logo in H1 tags

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <span style="background-color: lightblue; font-family: Ubuntu, san-serif; font-weight: 500; font-style: normal; color: black;">stayUp.io</span>
+        <h1><span style="background-color: lightblue; font-family: Ubuntu, san-serif; font-weight: 500; font-style: normal; color: black;">stayUp.io</span></h1>
         <p>Tools and support to operate Cloud Foundry clusters and keep CF apps running smoothly</p>
 
         <p class="view"><a href="http://www.logsearch.io">Logsearch<small>ELK + BOSH</small></a></p>
