--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
         <p class="view"><a href="http://www.logsearch.io">Logsearch<small>ELK + BOSH</small></a></p>
         <p class="view"><a href="https://github.com/logsearch/logsearch-for-cloudfoundry">Logsearch for Cloud Foundry<small>Log analysis for Cloud Foundry</small></a></p>
+        <p class="view"><a href="/products/elk-for-pcf.html">ELK-for-PCF Tile<small>Log analysis for Pivotal Cloud Foundry and related data services with commercial support</small></a></p>
 
       </header>
       <section>
