Add link to Companies House

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ After 2 years as lead of the Logsearch.io project (ELK + BOSH); he built the log
 Colin runs CloudCredo; the premier Cloud Foundry consulting company.  He is a regular speaker on PaaS-related topics, and a member of Cloud Foundry's Community Advisory Board.</p>
       </section>
       <footer>
-        <p>&copy; 2014-2015 STAYUP.IO LIMITED <br>UK Company No. 09563477</p>
+        <p>&copy; 2014-2015 <a href="https://beta.companieshouse.gov.uk/company/09563477">STAYUP.IO LIMITED <br>UK Company No. 09563477</a></p>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
