--- a/products/elk-for-pcf.html
+++ b/products/elk-for-pcf.html
@@ -32,10 +32,10 @@
 <p>The ELK-for-PCF Tile is a commercially licensed and supported extension for the Pivotal CF PaaS that installs and manages 
 a tightly interated Elastic ELK cluster that provides multi-tenanted log analysis services for both the PaaS components and the apps deployed to the PaaS</p>
 
+<img src="https://cloud.githubusercontent.com/assets/227505/8534394/cabdc8e8-2433-11e5-9ed2-abfdf87dde7f.png" alt="screen shot 2015-07-06 at 23 07 00" style="max-width:100%;">
 
 <h3>
 <a id="features" class="anchor" href="#features" aria-hidden="true"><span class="octicon octicon-link"></span></a>Features</h3>
-Features
       <ul>
         <li>Single Sign On: Integration with Cloud Foundry UAA to restrict access to Kibana</li>
         <li>Multi-tenant access: restrict access to only view logs related to apps in spaces the authenticated user is a member of</li>
