Update Elk for PCF link and email addresses

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         <p class="view"><a href="http://www.logsearch.io">Logsearch<small>ELK + BOSH</small></a></p>
         <p class="view"><a href="https://github.com/logsearch/logsearch-for-cloudfoundry">Logsearch for Cloud Foundry<small>Log analysis for Cloud Foundry</small></a></p>
-        <p class="view"><a href="/products/elk-for-pcf.html">ELK-for-PCF Tile<small>Log analysis for Pivotal Cloud Foundry and related data services with commercial support</small></a></p>
+        <p class="view"><a href="https://network.pivotal.io/products/elk">ELK-for-PCF Tile<small>Log analysis for Pivotal Cloud Foundry and related data services with commercial support</small></a></p>
 
       </header>
       <section>
@@ -36,11 +36,11 @@
 <a id="who-we-are" class="anchor" href="#who-we-are" aria-hidden="true"><span class="octicon octicon-link"></span></a>Who we are</h3>
 
 <p><img class="profile-avatar" src="https://cloud.githubusercontent.com/assets/227505/7658732/74075f3e-faf1-11e4-9549-afb2b36f71f4.png" alt="David Laing">
-<div class="profile-title">David Laing, CEO <a href="mailto:david@stayup.io"><img class="profile-icon" src="https://cloud.githubusercontent.com/assets/227505/7659289/c85b6cfc-faf5-11e4-9b9a-ebf29ec4e6a8.png"></a></div>
+<div class="profile-title">David Laing, CEO <a href="mailto:dlaing@pivotal.io"><img class="profile-icon" src="https://cloud.githubusercontent.com/assets/227505/7659289/c85b6cfc-faf5-11e4-9b9a-ebf29ec4e6a8.png"></a></div>
 After 2 years as lead of the Logsearch.io project (ELK + BOSH); he built the logsearch-for-cloudfoundry addon to bring log analysis to CF operators and CF users. </p>
 <br clear="all">
 <p><img class="profile-avatar" src="https://cloud.githubusercontent.com/assets/227505/7658987/9515cc36-faf3-11e4-906e-a67f867c5d24.jpg" alt="Colin Humphreys">
-<div class="profile-title">Colin Humphreys, CloudCredo <a href="mailto:colin@cloudcredo.com"><img class="profile-icon" src="https://cloud.githubusercontent.com/assets/227505/7659289/c85b6cfc-faf5-11e4-9b9a-ebf29ec4e6a8.png"></a></div>
+<div class="profile-title">Colin Humphreys, CloudCredo <a href="mailto:chumphreys@pivotal.io"><img class="profile-icon" src="https://cloud.githubusercontent.com/assets/227505/7659289/c85b6cfc-faf5-11e4-9b9a-ebf29ec4e6a8.png"></a></div>
 Colin runs CloudCredo; the premier Cloud Foundry consulting company.  He is a regular speaker on PaaS-related topics, and a member of Cloud Foundry's Community Advisory Board.</p>
       </section>
       <footer>
