--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
 <!doctype html>
 <html>
+
+<script>
+ window.location = 'http://pivotal.io';
+</script>
+
+
+<!-- 
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
@@ -8,9 +15,6 @@
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
     <link href="http://fonts.googleapis.com/css?family=Ubuntu:300,300italic,400,400italic,500,500italic,700,700italic&amp;subset=latin,greek,cyrillic" rel="stylesheet" type="text/css">
   </head>
   <body>
@@ -60,5 +64,5 @@ Colin runs CloudCredo; the premier Cloud Foundry consulting company.  He is a re
             } catch(err) {}
           </script>
 
-  </body>
+  </body> -->
 </html>
